// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RatingStars snapshots rating 2 1`] = `
<scale-rating-stars max-rating="5" min-rating="0" rating="2" star-size="large">
  <mock:shadow-root>
    <input aria-orientation="horizontal" aria-valuemax="5" aria-valuemin="0" aria-valuenow="2" aria-valuetext="2 out of 5 stars" id="scale-rating-star-1" max="5" min="0" part="range-slider" step="1" type="range" value="2">
    <div part="wrapper">
      <div data-selected data-value="1" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
      <div data-selected data-value="2" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
      <div data-value="3" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
      <div data-value="4" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
      <div data-value="5" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</scale-rating-stars>
`;

exports[`RatingStars snapshots rating 2, maxRating 7 1`] = `
<scale-rating-stars max-rating="7" min-rating="0" rating="2" star-size="large">
  <mock:shadow-root>
    <input aria-orientation="horizontal" aria-valuemax="7" aria-valuemin="0" aria-valuenow="2" aria-valuetext="2 out of 7 stars" id="scale-rating-star-3" max="7" min="0" part="range-slider" step="1" type="range" value="2">
    <div part="wrapper">
      <div data-selected data-value="1" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
      <div data-selected data-value="2" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
      <div data-value="3" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
      <div data-value="4" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
      <div data-value="5" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
      <div data-value="6" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
      <div data-value="7" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</scale-rating-stars>
`;

exports[`RatingStars snapshots rating 3, disabled 1`] = `
<scale-rating-stars disabled="" max-rating="5" min-rating="0" rating="3" star-size="large">
  <mock:shadow-root>
    <input aria-orientation="horizontal" aria-valuemax="5" aria-valuemin="0" aria-valuenow="3" aria-valuetext="3 out of 5 stars" disabled="" id="scale-rating-star-4" max="5" min="0" part="range-slider" step="1" type="range" value="3">
    <div part="wrapper">
      <div data-selected data-value="1" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
      <div data-selected data-value="2" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
      <div data-selected data-value="3" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
      <div data-value="4" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
      <div data-value="5" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</scale-rating-stars>
`;

exports[`RatingStars snapshots rating 3, minRating 1 1`] = `
<scale-rating-stars max-rating="5" min-rating="1" rating="3" star-size="large">
  <mock:shadow-root>
    <input aria-orientation="horizontal" aria-valuemax="5" aria-valuemin="1" aria-valuenow="3" aria-valuetext="3 out of 5 stars" id="scale-rating-star-2" max="5" min="1" part="range-slider" step="1" type="range" value="3">
    <div part="wrapper">
      <div data-selected data-value="1" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
      <div data-selected data-value="2" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
      <div data-selected data-value="3" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
      <div data-value="4" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
      <div data-value="5" part="star">
        <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
        <div class="icon-clip">
          <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</scale-rating-stars>
`;
